[package]
name = "wrwr-rtp"
description = ""
version = "0.5.2"
authors = ["rigma <rigbuntu@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
name = "wrwr_rtp"

[features]
default = ["g711", "g722", "h264", "opus", "vp8", "vp9"]
g711 = []
g722 = []
h264 = []
opus = []
vp8 = []
vp9 = []

[dependencies]
failure = "0.1.6"
chrono = "0.4.10"
rand = "0.7.3"
